--- a/trunk/user/udpxy/README
+++ b/trunk/user/udpxy/README
@@ -1,5 +1,5 @@
 #
-# Copyright 2008-2011 Pavel V. Cherenkov (pcherenkov@gmail.com)
+# Copyright 2008-2012 Pavel V. Cherenkov (pcherenkov@gmail.com)
 #
 #  This file is part of udpxy.
 #
@@ -122,11 +122,45 @@ The resulting PS file can be played back by most media players.
 Portability
 --------------
 udpxy was written to run on 'POSIX-compliant' systems;
-so far all builds have been tested to build and run on Linux 2.4, 2.6 (IA32, ARM)
+so far all builds have been tested to build and run on Linux 2.4, 2.6, 3.x (IA32, ARM)
 and *some* (but not all) on HP-UX 11.11 (PA-RISC 1.1, 2.0w).
 
 Build 12 of version 1.0 (Chipmunk) was ported to compile under FreeBSD 7.1
-using GNU make 3.8
+using GNU make 3.8; later builds have been tested to compile under later
+versions of FreeBSD (up to 9.0);
+
+Certain builds have been ported to build under cygwin; cygwin is
+*NOT* considered to be a fully supported platform yet there is an
+ongoing effort to make udpxy run on it as well.
+
+Environment variables
+--------------
+udpxy utilizes the following environment variables to compliment its
+command-line options; the variables are considered for the options that
+most people would not need to change too often (or simply inconvenient
+to use from the command line).
+
+NB: If there is a command-line switch that would intersect in functionality
+with an environment variable, the switch *always* has the higher priority.
+
+UDPXY_RCV_TMOUT         - timeout (sec) on the inbound data stream (multicast), default=5;
+UDPXY_DHOLD_TMOUT       - timeout (sec) to hold buffered data before sending/flushing to client(s), default=1;
+
+UDPXY_SREAD_TMOUT       - timeout (sec) to read from the listening socked (handling HTTP requests), default=1;
+UDPXY_SWRITE_TMOUT      - timeout (sec) to write to the listening socked (handling HTTP requests), default=1;
+UDPXY_SSEL_TMOUT        - timeout (sec) to select(2) in server loop (unused if pselect(2) is employed), default=30;
+UDPXY_LQ_BACKLOG        - size of the listener socket's backlog, default=16;
+UDPXY_SRV_RLWMARK       - low watermaek on the receiving (m-cast) socket, default=0 (not set);
+UDPXY_SSOCKBUF_NOSYNC   - do not sync inbound (UDP) socket's buffer size (with value set by -B), default=1 (sync);
+UDPXY_DSOCKBUF_NOSYNC   - do not sync outbound (TCP) socket's buffer size (with value set by -B), default=1 (sync);
+
+UDPXY_TCP_NODELAY       - disable Nagle algorithm on the newly accepted socket (faster channel switching), default=1;
+
+UDPXY_HTTP200_FTR_FILE - append contents of the given file to the HTTP 200 response, default=none;
+UDPXY_HTTP200_FTR_LN   - append the text (line) to the  HTTP 200 response, default=none;
+
+UDPXY_ALLOW_PAUSES     - if blocked on a write, keep reading data until the buffer (-B size) is full, default=disabled;
+UDPXY_PAUSE_MSEC       - allow only N milliseconds of reading data when blocked on a write.
 
 --EOF--
 
