xupnpd: update to rev382, remove dynamic m3u feeds from git

--- a/trunk/user/xupnpd/README
+++ b/trunk/user/xupnpd/README
@@ -10,3 +10,5 @@ Thanks to happy.neko aka Locky for VKontakte and GiantBomb plugin (http://lockyi
 Thanks to Igor Drach for DreamBox plugin
 Thanks to Iskrenkov Alexey for Cygwin port
 Thanks to Zyxmon (http://zyxmon.org), Smorygo Philipp
+Thanks to Semik for Gentoo patch
+
