--- a/trunk/user/miniupnpd/miniupnpd-1.8.x/Changelog.txt
+++ b/trunk/user/miniupnpd/miniupnpd-1.8.x/Changelog.txt
@@ -1,4 +1,24 @@
-$Id: Changelog.txt,v 1.338 2013/05/03 09:30:32 nanard Exp $
+$Id: Changelog.txt,v 1.344 2013/06/06 21:39:58 nanard Exp $
+
+2013/06/06:
+  update upnpreplyparse to allow larger values (128 chars instead of 64)
+
+2013/06/05:
+  check Service ID in SetDefaultConnectionService method
+  Don't advertise WANPPPConnection in UPNP_STRICT mode
+
+2013/05/29:
+  Remove namespace from variable name elements in Events "propertyset"
+    to comply with UPNP DeviceArchitecture v1.1.
+
+2013/05/20:
+  Adding support for IP Filter version 5.x
+
+2013/05/16:
+  refuses non integer <NewPortMappingIndex> values
+
+2013/05/14:
+  Update upnpreplyparse to take into account "empty" elements
 
 2013/05/03:
   Use pkg-config under linux to find libiptc. Thanks to Olivier Langlois
