--- a/trunk/user/usb-modeswitch/ChangeLog
+++ b/trunk/user/usb-modeswitch/ChangeLog
@@ -2,6 +2,12 @@
 History of USB_ModeSwitch
 =========================
 
+Version 1.2.6, 2013/06/02
+    Several changes to streamline compiling as part of larger projects
+    (thanks to Nicolas Carrier), mostly in Makefile; fix compiler warnings
+    appearing in certain build environments (N. Carrier); new Quanta
+    procedure (thanks to Andrey Tikhomirov) for Quanta 1K3 LTE; fix for
+    error with cascaded hubs in dispatcher script (hint from N. Carrier)
 Version 1.2.5, 2012/11/09
     Initial support for MBIM devices, use with data package >= 20121109;
     checking for these is the automatic default, new parameter NoMBIMCheck
