--- a/trunk/user/usb-modeswitch/usb_modeswitch.1
+++ b/trunk/user/usb-modeswitch/usb_modeswitch.1
@@ -100,6 +100,8 @@ Send a special control message used by Sequans chipset
 Send a special control message used by the MobileAction device
 .IP "\fB-B\fP \fB\-\-qisda-mode\fP         " 10
 Send a special control message used by Qisda devices
+.IP "\fB-E\fP \fB\-\-quanta-mode\fP         " 10
+Send a special control message used by Quanta devices
 .IP "\fB-O\fP \fB\-\-sony-mode\fP         " 10
 Apply a special sequence used by Sony Ericsson devices. Implies option \--success
 .IP "\fB-L\fP \fB\-\-cisco-mode\fP         " 10
@@ -156,4 +158,4 @@ later version published by the Free Software Foundation.
 The complete text of the current GNU General Public
 License can be found in http://www.gnu.org/licenses/gpl.txt
 
-.\" last edited 2011-10-23 for version 1.2.2
+.\" last edited 2013-06-02 for version 1.2.6
