xl2tpd: bump to v1.3.2

--- a/trunk/user/xl2tpd/CHANGES
+++ b/trunk/user/xl2tpd/CHANGES
@@ -1,6 +1,36 @@
-v1.3.2 (unreleased)
+v1.3.2 (Nov 15, 2013)
 * Remove unused variables reported by gcc -Wunused [Paul Wouters]
 * Retain password when redial is enabled [Ted Phelps]
+* Respect LDFLAGS, original author unknown [Jeremy Olexa]
+* Turn off UDP checksums [mcr]
+* Respect CFLAGS for xl2tpd-control [Mike Gilbert]
+* Patches from Fedora to use Openssl MD5 instead of our own [Patrick Naubert]
+* Cosmetic fix log warning about IPsec SAref kernel mod support [Pavel Kopchyk]
+* Upgrade options (in global contex) according to their keyword words in 'file.c' [Pavel Kopchyk]
+* Actually force userspace when using SAref [Sergey Fionov]
+* Enable kernel-mode by default [Sergey Fionov]
+* Fix kernel support for 2.6.23+ [Sergey Fionov]
+* Remove if_pppol2tp.h header [Sergey Fionov]
+* Tell pppd to set LNS mode flag on kernel pppol2tp session socket. [Sergey Fionov]
+* Wrap connect_pppol2tp() with ifdef [Sergey Fionov]
+* Check for existence of SO_NO_CHECK before using it [Stuart Henderson]
+* Check that argv[1] isn't null before strncmp() [Stuart Henderson]
+* Set a valid msg_controllen, OpenBSD needs it [Stuart Henderson]
+* Avoid type punning: it makes gcc grumpy. [Ted Phelps]
+* Cope with comment lines that extend beyond 120 characters. BZ#806963. [Ted Phelps]
+* Document the default duration of the redial timeout option. [Ted Phelps]
+* Don't call grantpt(). [Ted Phelps]
+* Fix an uninitialize memory access. [Ted Phelps]
+* Fix udp_xmit to work on Linux *and* OpenBSD [Ted Phelps]
+* Increase the size of the buffer used to read config file lines. [Ted Phelps]
+* Make it possible to prevent xl2tpd from overwriting ppp's ipparam [Ted Phelps]
+* Quash more valgrind warnings. [Ted Phelps]
+* Set msgh.msg_controllen before calling CMSG_FIRSTHDR [Ted Phelps]
+* + use address from the last received UDP packet in UDP messages response [Tomas Chmelar]
+* Clean up samples [Tuomo]
+* Don't mark some AVPs as mandatory [wangxiaoguang]
+  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=680146
+* Remove a 'sleep' in control_finish [wangxiaoguang]
 
 v1.3.1 (Oct 6, 2011)
 * Suse updated to spec and init files [Shinichi Furuso]
