xupnpd: update to rev395

--- a/trunk/user/xupnpd/README
+++ b/trunk/user/xupnpd/README
@@ -11,4 +11,4 @@ Thanks to Igor Drach for DreamBox plugin
 Thanks to Iskrenkov Alexey for Cygwin port
 Thanks to Zyxmon (http://zyxmon.org), Smorygo Philipp
 Thanks to Semik for Gentoo patch
-
+Thanks to Alexander E. Patrakov for mcast-ifindex patch
