--- a/trunk/user/miniupnpd/miniupnpd-1.8.x/Changelog.txt
+++ b/trunk/user/miniupnpd/miniupnpd-1.8.x/Changelog.txt
@@ -1,4 +1,8 @@
-$Id: Changelog.txt,v 1.347 2013/12/16 15:38:52 nanard Exp $
+$Id: Changelog.txt,v 1.348 2014/02/03 09:32:09 nanard Exp $
+
+2014/02/03:
+  PCP : Add support for ANNOUNCE requests
+  minixml now handle XML comments
 
 2013/12/16:
   Attempt to compile with OS X/pf
