inadyn,rc,www: add support DuckDNS service

--- a/trunk/user/inadyn/man/inadyn.8
+++ b/trunk/user/inadyn/man/inadyn.8
@@ -84,6 +84,8 @@ http://www.sitelutions.com
 http://www.dnsexit.com
 .It
 http://www.changeip.com
+.It
+http://www.duckdns.org
 .El
 .Pp
 The basic operation of
@@ -161,6 +163,8 @@ http://www.sitelutions.com
 http://www.dnsexit.com
 .It Cm default@changeip.com
 http://www.changeip.com
+.It Cm default@duckdns.org
+http://www.duckdns.org
 .It Cm custom@http_svr_basic_auth
 .El
 .It Fl x, -proxy-server Ar SERVER Ns Op : Ns Ar PORT
